Added background image, responsiveness, designed the drop down menu

--- a/index.html
+++ b/index.html
@@ -13,31 +13,26 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="item1"><img src="peak.jpg" height="90"><span class="but">Peak Tutors Student Portal</span>
-            <p class="but1">Student Portal</p>
+        <div class="item1"><span class="but">Peak Tutors Student Portal</span>
         </div>
         <div class="item2">
             <nav id="allow">
                 <ul>
-                    <li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Organization</a></li>
-                        <li><a href="#">Courses</a></li>
-                        <li><a href="#">Staff</a></li>
-                        <li><a href="#">Enquires</a></li>
-                    </li>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Organization</a></li>
+                    <li><a href="#">Courses</a></li>
+                    <li><a href="#">Staff</a></li>
+                    <li><a href="#">Enquires</a></li>
                 </ul>
             </nav>
-            <div class="dropbtn">
-                <a href="#"><i class="fas fa-align-justify fa-2x"></i></a>
+            <div class="dropdown">
+                <a class="dropbtn" href="#"><i class="fa fa-bars fa-lg"></i></a>
                 <div class="content">
-                    <ul>
-                        <li> <a class="not" href="#">Home</a></li>
-                        <li> <a class="not" href="#">Organization</a></li>
-                        <li> <a class="not" href="#">Courses</a></li>
-                        <li> <a class="not" href="#">Staff</a></li>
-                        <li> <a class="not" href="#">Enquires</a></li>
-                    </ul> 
+                    <a class="not" href="#">Home</a>
+                    <a class="not" href="#">Organization</a>
+                    <a class="not" href="#">Courses</a>
+                    <a class="not" href="#">Staff</a>
+                    <a class="not" href="#">Enquires</a>
                 </div>
             </div>
         </div> 
