fixed another background image, edited the footer

--- a/index.html
+++ b/index.html
@@ -13,26 +13,21 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="item1"><span class="but">Peak Tutors Student Portal</span>
-        </div>
+        <div class="item1">Peak Tutors Student Portal</div>
         <div class="item2">
             <nav id="allow">
                 <ul>
                     <li><a href="#">Home</a></li>
-                    <li><a href="#">Organization</a></li>
-                    <li><a href="#">Courses</a></li>
                     <li><a href="#">Staff</a></li>
-                    <li><a href="#">Enquires</a></li>
+                    <li><a href="#">Contact Us</a></li>
                 </ul>
             </nav>
             <div class="dropdown">
                 <a class="dropbtn" href="#"><i class="fa fa-bars fa-lg"></i></a>
                 <div class="content">
                     <a class="not" href="#">Home</a>
-                    <a class="not" href="#">Organization</a>
-                    <a class="not" href="#">Courses</a>
                     <a class="not" href="#">Staff</a>
-                    <a class="not" href="#">Enquires</a>
+                    <a class="not" href="#">Contact Us</a>
                 </div>
             </div>
         </div> 
@@ -68,7 +63,7 @@
                     <span class="connect">Connect with us</span>
                     <a  class="gmail" href="mailto:alozieuche17@gmail.com" target="_blank"><i class="far fa-envelope fa-lg"></i></a>
                     <a class="linkedin"  href="https://www.linkedin.com/in/alozie-uche/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
-                    <p><span class="foot"> &#169; Blessing &#38; Nwa-Alozie</p>
+                    <p><span class="foot"> &#169; 2020 B &#38; U </p>
                 </footer>
             </div>  
         </div>
