Re-designed the nav bar

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <title>practice1</title>
     <link rel="stylesheet" href="peak.css" type="text/css">
     <link rel="stylesheet" href="peak1.css" type="text/css">
@@ -13,23 +13,28 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="item1">Peak Tutors Student Portal</div>
+        <div class="item1"><span class="you">Peak Tutors Student Portal</div>
         <div class="item2">
-            <nav id="allow">
-                <ul>
+            <nav>
+                <div class="hamburger">
+                    <div class="line"></div>
+                    <div class="line"></div>
+                    <div class="line"></div>
+                </div>
+                <ul class="nav-links">
                     <li><a href="#">Home</a></li>
                     <li><a href="#">Staff</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
             </nav>
-            <div class="dropdown">
+            <!-- <div class="dropdown">
                 <a class="dropbtn" href="#"><i class="fa fa-bars fa-lg"></i></a>
                 <div class="content">
                     <a class="not" href="#">Home</a>
                     <a class="not" href="#">Staff</a>
                     <a class="not" href="#">Contact Us</a>
                 </div>
-            </div>
+            </div> -->
         </div> 
         <div class="item3">
             <div id="item31">
