Edited the hover effect on links

--- a/index.html
+++ b/index.html
@@ -22,19 +22,11 @@
                     <div class="line"></div>
                 </div>
                 <ul class="nav-links">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Staff</a></li>
-                    <li><a href="#">Contact Us</a></li>
+                    <li><a class ="admit" href="#">Home</a></li>
+                    <li><a class ="admit" href="#">Staff</a></li>
+                    <li><a class ="admit" href="#">Contact Us</a></li>
                 </ul>
             </nav>
-            <!-- <div class="dropdown">
-                <a class="dropbtn" href="#"><i class="fa fa-bars fa-lg"></i></a>
-                <div class="content">
-                    <a class="not" href="#">Home</a>
-                    <a class="not" href="#">Staff</a>
-                    <a class="not" href="#">Contact Us</a>
-                </div>
-            </div> -->
         </div> 
         <div class="item3">
             <div id="item31">
