--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="peak.css" type="text/css">
     <link rel="stylesheet" href="peak1.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Amaranth' rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Artifika' rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Poppins' rel="stylesheet">
    
 </head>
 <body>
@@ -17,9 +16,9 @@
         <div class="item2">
             <nav>
                 <div class="hamburger">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
+                    <div class="line1"></div>
+                    <div class="line2"></div>
+                    <div class="line3"></div>
                 </div>
                 <ul class="nav-links">
                     <li><a class ="admit" href="#">Home</a></li>
@@ -57,10 +56,9 @@
                 <footer>
                     <a  class="gmail" href="mailto:ojoblessingabidemi@gmail.com" target="_blank"><i class="far fa-envelope fa-lg"></i></a>
                     <a class="linkedin"  href="https://www.linkedin.com/in/blessing-ojo-4848b6196" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
-                    <span class="connect">Connect with us</span>
                     <a  class="gmail" href="mailto:alozieuche17@gmail.com" target="_blank"><i class="far fa-envelope fa-lg"></i></a>
                     <a class="linkedin"  href="https://www.linkedin.com/in/alozie-uche/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
-                    <p><span class="foot"> &#169; 2020 B &#38; U </p>
+                    <p><span class="foot"> &#169; 2020 B&#38;U </p>
                 </footer>
             </div>  
         </div>
