Edited the header

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@
         <div class="item4">
             <div id="foot">
                 <footer>
-                    <a  class="gmail" href="mailto:ojoblessingabidemi@gmail.com" target="_blank"><i class="far fa-envelope fa-lg"></i></a>
+                    <!-- <a  class="gmail" href="mailto:ojoblessingabidemi@gmail.com" target="_blank"><i class="far fa-envelope fa-lg"></i></a>
                     <a class="linkedin"  href="https://www.linkedin.com/in/blessing-ojo-4848b6196" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
                     <a  class="gmail" href="mailto:alozieuche17@gmail.com" target="_blank"><i class="far fa-envelope fa-lg"></i></a>
-                    <a class="linkedin"  href="https://www.linkedin.com/in/alozie-uche/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a>
+                    <a class="linkedin"  href="https://www.linkedin.com/in/alozie-uche/" target="_blank"><i class="fab fa-linkedin fa-lg"></i></a> -->
                     <p><span class="foot"> &#169; 2020 B&#38;U </p>
                 </footer>
             </div>  
