Started designing the home page

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
-    <title>practice1</title>
+    <title>index</title>
     <link rel="stylesheet" href="peak.css" type="text/css">
     <link rel="stylesheet" href="peak1.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel="stylesheet">
