--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                     <div class="line3"></div>
                 </div>
                 <ul class="nav-links">
-                    <li><a class ="admit" href="homepage.html">Home</a></li>
+                    <li><a class ="admit" href="#">Home</a></li>
                     <li><a class ="admit" href="#">Staff</a></li>
                     <li><a class ="admit" href="#">Contact Us</a></li>
                 </ul>
@@ -29,7 +29,7 @@
         </div> 
         <div class="item3">
             <div id="item3a">
-                <form id="login-form" method="POST">
+                <form autocomplete = "off" id="login-form" method="POST" action= "https://peak-tutors-ub.herokuapp.com/api/accounts/login/">
                    <span id="note">Welcome Back!</span>
                     <div class="item3a1">
                         <label for="matricno">MATRIC NO</label>
@@ -50,24 +50,24 @@
             </div>
            <div id="item3b">
                 <span id="note">REGISTER</span>
-                <form id="signup-form" method="POST">
+                <form autocomplete = "off" id="signup-form" method="POST" action="https://peak-tutors-ub.herokuapp.com/api/accounts/register/">
                     <div class="item3b1">
                         <label for="email">EMAIL</label>
                         <input type="email" id="email" name="email" placeholder= "Enter Email" required > <br>
                     </div>
                     <div class="item3b1">
-                        <label for="matricno">MATRIC NO</label>
-                        <input type="text" id="matricno" name="matricno" placeholder="Enter Matric No" required> <br>  
+                        <label for="signup-matricno">MATRIC NO</label>
+                        <input type="text" id="signup-matricno" name="signup-matricno" placeholder="Enter Matric No" required> <br>  
                     </div>
                     <div class="item3b1">
-                        <label for="password">PASSWORD</label>
-                        <input type="password" id="password" name="password" placeholder="Enter Password" value="" required> <br>
+                        <label for="signup-password">PASSWORD</label>
+                        <input type="password" id="signup-password" name="signup-password" placeholder="Enter Password" required> <br>
                     </div>
                     <div class="item3b1">
                         <label for="password2">CONFIRM PASSWORD</label>
-                        <input type="password" id="password2" name="password2" placeholder="Confirm Password" value="" required> <br>
+                        <input type="password" id="password2" name="password2" placeholder="Confirm Password" required> <br>
                     </div>
-                    <button class="typetwo cup" id="login-form"><i class="fas fa-user-circle fa-1x"></i>SIGN UP</button>
+                    <button type="submit" class="typetwo cup" ><i class="fas fa-user-circle fa-1x"></i>SIGN UP</button>
                 </form>
             </div> 
         </div>
@@ -85,6 +85,7 @@
     </div>
     <script src="jqry.js"></script>
     <script src="peakt.js"></script>
+    <script src="index.js"></script>
     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 </body>
 </html>
