--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                    <span id="note">Welcome Back!</span>
                     <div class="item3a1">
                         <label for="matricno">MATRIC NO</label>
-                        <input type="text" id="matricno" name="matricno" placeholder="Enter Matric No" required> <br>
+                        <input type="text" id="matricno" name="matricno" placeholder="Enter Matric No" required pattern = "^([A-Za-z]{3})\/([1-9]{1}[0-9]{3})\/([0-9]{3})$" title="Requested format is ABC/2001/101"> <br>
                     </div>
                     <div class="item3a1">
                         <label for="password">PASSWORD</label>
@@ -45,7 +45,7 @@
                     </div>
                 </form>
                 <p class="boomtwo">New to Peak Tutors? 
-                    <a id="signup-btn" class="boomthird" href="#">Register</a>
+                    <a id="signup-btn" onclick="kris()" class="boomthird" href="#">Register</a>
                 </p>
             </div>
            <div id="item3b">
@@ -57,11 +57,11 @@
                     </div>
                     <div class="item3b1">
                         <label for="signup-matricno">MATRIC NO</label>
-                        <input type="text" id="signup-matricno" name="signup-matricno" placeholder="Enter Matric No" required> <br>  
+                        <input type="text" id="signup-matricno" name="signup-matricno" placeholder="Enter Matric No" required pattern = "^([A-Za-z]{3})\/([1-9]{1}[0-9]{3})\/([0-9]{3})$" title="Requested format is ABC/2001/101" > <br>  
                     </div>
                     <div class="item3b1">
                         <label for="signup-password">PASSWORD</label>
-                        <input type="password" id="signup-password" name="signup-password" placeholder="Enter Password" required> <br>
+                        <input type="password" id="signup-password" name="signup-password" placeholder="Enter Password" required pattern> <br>
                     </div>
                     <div class="item3b1">
                         <label for="password2">CONFIRM PASSWORD</label>
@@ -86,6 +86,6 @@
     <script src="jqry.js"></script>
     <script src="peakt.js"></script>
     <script src="index.js"></script>
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <!-- <script src="https://kit.fontawesome.com/a076d05399.js"></script> -->
 </body>
 </html>
