Redesigned a new profile page, redirection of new user to the update profile page

--- a/homepage.html
+++ b/homepage.html
@@ -18,7 +18,7 @@ if(sessionStorage.getItem('AuthenticationState') == null){
             <nav>
                
                 <ul class="nav-links">
-                    <li><a href="#" class="admit">Update Profile</a></li>
+                    <li><a href="profile.html" class="admit">Update Profile</a></li>
                     <li><a href="#" class="admit">Register Courses</a></li>
                     <li><a href="#" class="admit">Course List</a></li>
                     <li><a href="#" class="admit">Check Results</a></li>
