Could hit the refresh token endpoint and get a new access token when it expires

--- a/homepage.html
+++ b/homepage.html
@@ -19,7 +19,7 @@
                     <li><a href="#" class="admit">Register Courses</a></li>
                     <li><a href="#" class="admit">Course List</a></li>
                     <li><a href="#" class="admit">Check Results</a></li>
-                    <li><a href="#" class="admit">Sign out</a></li>
+                    <li><a href="#" class="admit" onclick="logout()">Sign out</a></li>
                     
                 </ul>
                
