I started working on the Register Courses page

--- a/homepage.html
+++ b/homepage.html
@@ -16,7 +16,7 @@
                
                 <ul class="nav-links">
                     <li><a href="editprofile.html" class="admit">Edit Profile</a></li>
-                    <li><a href="#" class="admit">Register Courses</a></li>
+                    <li><a href="RegisterCourse.html" class="admit">Register Courses</a></li>
                     <li><a href="#" class="admit">Course List</a></li>
                     <li><a href="#" class="admit">Check Results</a></li>
                     <li><a href="#" class="admit" onclick="logout()">Sign out</a></li>
