User can get courses from the server and enrol for their course but one at a time

--- a/RegisterCourse.html
+++ b/RegisterCourse.html
@@ -14,9 +14,10 @@
         <div class="item2">
             <div class="item2a">
                 <p class="course">Register Courses</p>
-                <form method = "GET" autocomplete= "off">
+                <form method = "POST" autocomplete= "off" id="registercourse" >
                     <select id="myselect" name="myselect">
                         <option>Courses</option>
+                        
                     </select> <br>
                         <input type="submit" id = "submit" value="REGISTER">
                 
