--- a/RegisterCourse.html
+++ b/RegisterCourse.html
@@ -22,6 +22,7 @@
                         <input type="submit" id = "submit" value="REGISTER">
                 
                 </form>
+                <a href="homepage.html"><button class="submit">HOME</button></a>
             </div>
         </div>
         <div class="item3">
