--- a/Tutorial-Eportal/html/homepage.html
+++ b/Tutorial-Eportal/html/homepage.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=0">
     <title>Home</title>
     <link rel="stylesheet" href="/Tutorial-Eportal/css/homepage.css" type="text/css">
-    <link rel="stylesheet" href="/Tutorial-Eportal/css/homepageextra.css" type="text/css">
     <link rel="stylesheet" href="/Tutorial-Eportal/css/homepage2.css" type="text/css">
     <link href='https://fonts.googleapis.com/css?family=ABeeZee' rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Poppins' rel="stylesheet">
@@ -31,11 +30,9 @@
                 <div class="logo"><h4>Profile</h4></div>
                 <ul class="nav-links">
                     <li><a href="homepage.html" class="admit">Home</a></li>
-                    <!-- <li><a href="editprofile.html" class="admit">Edit Profile</a></li> -->
                     <li><a href="RegisterCourse.html" class="admit">Register Courses</a></li>
                     <li><a href="CourseListnew.html" class="admit">Course List</a></li>
-                    <li><a href="Result.html" class="admit">Check Results</a></li>
-                    <!-- <li><a href="#" class="admit" onclick="logout()">Sign out</a></li> -->
+                    <li><a href="Resultnew.html" class="admit">Check Results</a></li>
                     
                 </ul>
                 <div class="burger">
@@ -69,40 +66,9 @@
                 <a href="editprofile.html"><button class="editprofile one">Edit Profile</button></a> 
             </div>
             <div class="button2"><button class="editprofile1" onclick="logout()" >Log Out</button></div>
-            <!-- <div class="profile">
-                User Name <br>
-                Blessing 
-            </div>>
-            <div class="profile">
-                Matric No <br>
-                EEG/2015/098
-            </div>
-            <div class="profile">
-                Gender <br>
-                MALE
-            </div> -->
-            <!-- <div id="item3a">
-                <p id = "mat"></p>
-                <p id = "depart"></p>
-                <p id = "fat"></p>
-           </div> -->
 
         </div>
         <div class="item4">
-            <!-- <div class="profile">
-                    Department <br> Computer Engineering
-            </div>
-            <div class="profile">
-                Faculty <br>Technology
-            </div>
-            <div class="">
-                <img class="image1" src = "student1.jpg">
-            </div> -->
-            <!-- <ul class="profile">
-                <li> Department <br> Computer Engineering</li>
-                <li> Faculty <br>Technology</li>
-                <li> <div class="image"></div></li>
-            </ul> -->
           
             <div id="foot">
                 <footer>
